--- a/Projects/crud/pubspec.yaml
+++ b/Projects/crud/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   font_awesome_flutter: ^10.5.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
