--- a/Projects/crud/pubspec.yaml
+++ b/Projects/crud/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   font_awesome_flutter: ^10.5.0
   intl: ^0.18.1
+  flutter_slidable: ^3.0.0
 
 dev_dependencies:
   flutter_test:
