--- a/Assignments/mod9asgmt/pubspec.yaml
+++ b/Assignments/mod9asgmt/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   intl: ^0.18.1
+  font_awesome_flutter: ^10.5.0
+  shared_preferences: ^2.2.0
   
 
 dev_dependencies:
