--- a/Assignments/mod9asgmt/pubspec.yaml
+++ b/Assignments/mod9asgmt/pubspec.yaml
@@ -39,13 +39,17 @@ dependencies:
   intl: ^0.18.1
   font_awesome_flutter: ^10.5.0
   shared_preferences: ^2.2.0
-  
+  flutter_launcher_icons: ^0.13.1
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  ios: true
+  android: true
+  image_path: "assets/logo/logo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -66,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
