--- a/Assignments/mod9asgmt/pubspec.yaml
+++ b/Assignments/mod9asgmt/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   shared_preferences: ^2.2.0
   flutter_launcher_icons: ^0.13.1
+  connectivity: ^3.0.3
+  
   
 
 dev_dependencies:
