--- a/Assignments/mod9asgmt/.vscode/settings.json
+++ b/Assignments/mod9asgmt/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "/Volumes/HDD-Z/dxProgramming/Flutter-Practice/Assignments/mod9asgmt/linux"
+    "cmake.sourceDirectory": "/Volumes/HDD-Z/dxProgramming/Flutter-Practice/Assignments/mod9asgmt/linux",
+    "dart.flutterSdkPath": "~/fvm/versions/3.13.9"
 }
